--- a/css/dsinatra.css
+++ b/css/dsinatra.css
@@ -1882,16 +1882,39 @@ blockquote {
   width: 300px;
 }
 
-/* new gallery */
-/*.events-list .copy {*/
-/* Prevent vertical gaps */
-/*-webkit-column-count: 3;*/
-/*-webkit-column-gap:   0;*/
-/*-moz-column-count:    3;*/
-/*-moz-column-gap:      0;*/
-/*column-count:         3;*/
-/*column-gap:           0;*/
-/*}*/
+#rules-and-conditions {
+  background: url("../images/bg-rules-and-conditions.jpg") center center no-repeat;
+  background-attachment: fixed;
+  min-height: 600px;
+  font-size: 1.2em;
+}
+#rules-and-conditions h1 {
+  background: #cccccc;
+  margin: 0;
+  padding: 10px 15px;
+  font-size: 1.7em;
+}
+#rules-and-conditions .more-button {
+  float: right;
+  padding: 5px 8px;
+  font-size: 0.7em;
+}
+#rules-and-conditions .copy {
+  padding: 0 20px 20px 20px;
+}
+#rules-and-conditions .copy .centered-text {
+  text-align: center;
+}
+#rules-and-conditions .copy .top-text {
+  padding-bottom: 10px;
+}
+#rules-and-conditions .copy .top-text * {
+  padding-bottom: 5px;
+}
+#rules-and-conditions .copy li {
+  padding-bottom: 10px;
+}
+
 /* ------------------------------------------------------------------------------------------------------------- */
 .clearfix:before, .clearfix:after {
   content: "";
