--- a/scss/dsinatra.scss
+++ b/scss/dsinatra.scss
@@ -1884,18 +1884,50 @@ blockquote {
     }
 }
 
-/* new gallery */
-/*.events-list .copy {*/
-/* Prevent vertical gaps */
 
-/*-webkit-column-count: 3;*/
-/*-webkit-column-gap:   0;*/
-/*-moz-column-count:    3;*/
-/*-moz-column-gap:      0;*/
-/*column-count:         3;*/
-/*column-gap:           0;*/
-/*}*/
+#rules-and-conditions {
+    background: url("../images/bg-rules-and-conditions.jpg") center center no-repeat;
+    background-attachment: fixed;
+    min-height: 600px;
 
+    font-size: 1.2em;
+
+    h1 {
+        background: #cccccc;
+        margin: 0;
+        padding: 10px 15px;
+        font-size: 1.7em;
+//        position: fixed;
+//        width: 100%;
+//        box-sizing: border-box;
+    }
+
+    .more-button {
+        float: right;
+        padding: 5px 8px;
+        font-size: 0.7em;
+    }
+
+    .copy {
+        padding: 0 20px 20px 20px;
+
+        .centered-text {
+            text-align: center;
+        }
+
+        .top-text {
+            padding-bottom: 10px;
+            * {
+                padding-bottom: 5px;
+            }
+        }
+
+        li {
+            padding-bottom: 10px;
+        }
+    }
+
+}
 
 
 
