--- a/scss/dsinatra.scss
+++ b/scss/dsinatra.scss
@@ -188,7 +188,7 @@ ul#main-nav li a.active span {
 
 .js #slideshow ul {
     left: -950px;
-    width: 5700px;
+    width: 6650px;
     overflow: visible;
 }
 
@@ -1737,10 +1737,9 @@ blockquote {
     font-weight: bold;
 }
 
-
 .sub-page-nav {
     border-top: 1px solid #cccccc;
-    padding: 5px 0 20px 0;
+    padding: 5px 0;
 }
 
 .sub-page-nav ul {
@@ -1955,7 +1954,7 @@ blockquote {
 }
 
 
-.c {
+.stand-alone-link {
     padding: 0 !important;
 }
 
