--- a/css/dsinatra.css
+++ b/css/dsinatra.css
@@ -224,7 +224,7 @@ ul#main-nav li a.active span {
 
 .js #slideshow ul {
   left: -950px;
-  width: 5700px;
+  width: 6650px;
   overflow: visible;
 }
 
@@ -1763,7 +1763,7 @@ blockquote {
 
 .sub-page-nav {
   border-top: 1px solid #cccccc;
-  padding: 5px 0 20px 0;
+  padding: 5px 0;
 }
 
 .sub-page-nav ul {
@@ -1929,7 +1929,7 @@ blockquote {
   height: 450px;
 }
 
-.c {
+.stand-alone-link {
   padding: 0 !important;
 }
 
